tests/NormalTests/paczka1/fuzzy1/22457824.err
Error in line 13: pQG S587 69,1
Error in line 14: pQG A547 73,2
Error in line 31: a2eUkidpU S587 27,6
Error in line 40: YMgMDjz131a S587 74,46
